# C_IZ2

./: .travis.yml  CMakeLists.txt  README.md
consistentSolution/: decision.c  decision.h  decisionConsistent.c  decisionConsistent.h
consistentSolution/include/: decision.h  infoContainer.h
consistentSolution/src/: decision.c  infoContainer.c
dz/: main.c
infoContainer/: infoContainer.c  infoContainer.h
parallelSolution/: decision.c  decision.h  decisionParallel.c  decisionParallel.h
parallelSolution/src/: decision.c
tests/: CMakeLists.txt  tests.cpp
unitTests/: CMakeLists.txt  myTests.cpp
unitTets/: main.cpp
